--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -233,6 +233,7 @@
                                         <CheckBox Content="{DynamicResource SettingsUIEnableML}"          IsChecked="{Binding CPKREDIR.Enabled}"                       Margin="0,0,0,5"/>
                                         <CheckBox Content="{DynamicResource SettingsUIEnableDebug}"       IsChecked="{Binding CPKREDIR.EnableDebugConsole}"            Margin="0,0,0,5"/>
                                         <CheckBox Content="{DynamicResource SettingsUIEnableSRedir}"      IsChecked="{Binding CPKREDIR.EnableFallbackSaveRedirection}" Margin="0,0,0,5"/>
+                                        <CheckBox Content="{DynamicResource SettingsUIUseLauncher}"       IsChecked="{Binding CPKREDIR.UseLauncher}"                   Margin="0,0,0,5"/>
                                         <!--<CheckBox Content="{DynamicResource SettingsUILoadTopBottom}" IsChecked="{Binding ModsDB.ReverseLoadOrder}"                Visibility="{Binding HiddenMode, Converter={StaticResource BoolToVisibilityConverter}}"/>-->
                                     </StackPanel>
 
