--- a/HedgeModManager/Languages/en-UW.xaml
+++ b/HedgeModManager/Languages/en-UW.xaml
@@ -3,8 +3,6 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <!-- uwu'd with https://github.com/Daniel-Liu-c0deb0t/uwu -->
-
     <!-- Common UI Strings -->
     <system:String x:Key="CommonUIClose"   >cwose</system:String>
     <system:String x:Key="CommonUIOK"      >ok</system:String>
@@ -38,7 +36,7 @@
     <system:String x:Key="ModsUIName"           >name</system:String>
     <system:String x:Key="ModsUIVersion"        >vewsion</system:String>
     <system:String x:Key="ModsUIAuthor"         >authow</system:String>
-    <system:String x:Key="ModsUIFeatures"       >f-featuwes</system:String>
+    <system:String x:Key="ModsUIFeatures"       >featuwes</system:String>
     <system:String x:Key="ModsUIModDescription" >descwiption</system:String>
     <system:String x:Key="ModsUIModFavorite"    >favouwite</system:String>
     <system:String x:Key="ModsUIModConfigure"   >configuwe m-mod</system:String>
@@ -51,6 +49,8 @@
     <system:String x:Key="ModsUIFeatureConfigDisable">this mod does n-nyot suppowt configuwation. (U ᵕ U❁)</system:String>
     <system:String x:Key="ModsUIFeatureUpdate"       >this m-mod suppowts updating.</system:String>
     <system:String x:Key="ModsUIFeatureUpdateDisable">this mod d-does nyot suppowt updating. (˘ω˘)</system:String>
+    <system:String x:Key="ModsUIFeatureUpdateFailed" >This mod has failed to check for updates.</system:String>
+    <system:String x:Key="ModsUIFeatureUpdateBlocked">This mod has been blocked from checking for updates.</system:String>
     <system:String x:Key="ModsUIFeatureSave"         >this mod utiwises save w-wediwection. o.O</system:String>
     <system:String x:Key="ModsUIFeatureSaveDisable"  >this mod does nyot s-suppowt save w-wediwection. o.O</system:String>
     <system:String x:Key="ModsUIFeatureCode"         >this m-mod contains custom code. (///ˬ///✿)</system:String>
@@ -78,6 +78,7 @@
     <system:String x:Key="SettingsUIEnableML"       >enabwe mod woadew</system:String>
     <system:String x:Key="SettingsUIEnableDebug"    >enabwe d-debug consowe</system:String>
     <system:String x:Key="SettingsUIEnableSRedir"   >enabwe save fiwe wediwection</system:String>
+    <system:String x:Key="SettingsUIUseLauncher"    >use game w-waunchew</system:String>
     <system:String x:Key="SettingsUILabelLoaders"   >woadews:</system:String>
     <system:String x:Key="SettingsUILabelGame"      >game:</system:String>
     <system:String x:Key="SettingsUILabelProfile"   >pwofiwe:</system:String>
@@ -88,7 +89,7 @@
     <system:String x:Key="SettingsUICheckCLUpdate"  >check fow code woadew updates</system:String>
     <system:String x:Key="SettingsUICheckModUpdates">check fow mod updates</system:String>
     <system:String x:Key="SettingsUIKeepHMMOpen"    >keep hedge mod m-managew open aftew stawting a g-game</system:String>
-    <system:String x:Key="SettingsUICheckHMMUpdate" >check fow updates</system:String>
+    <system:String x:Key="SettingsUICheckHMMUpdate" >Check for Updates</system:String>
     <system:String x:Key="SettingsUIAboutHMM"       >about hedge mod managew</system:String>
     <system:String x:Key="SettingsUILanguage"       >wanguage:</system:String>
     <system:String x:Key="SettingsUITheme"          >theme:</system:String>
@@ -111,7 +112,7 @@
     <system:String x:Key="MainUIMissingDependsHeader" >faiwed t-to wesowve mod dependencies</system:String>
     <system:String x:Key="MainUIMissingDepends"       >the f-fowwowing mods have missing d-dependencies:</system:String>
     <system:String x:Key="MainUIMissingDependsResolve">wesowve g-gb mods</system:String>
-    <system:String x:Key="MainUIResolvable" xml:space="preserve">one o-ow mowe dependencies can be automaticawwy wesowved&#x0a;fwom gamebanana by cwicking "wesowve g-gb mods". UwU</system:String>
+    <system:String x:Key="MainUIResolvable" xml:space="preserve">one o-ow mowe dependencies can be automaticawwy wesowved&#x0a;fwom gamebanana by cwicking &quot;wesowve g-gb mods&quot;. UwU</system:String>
 
     <!-- OptionsWindow UI Strings -->
     <system:String x:Key="OptionsWindowUIError"      >pwease sewect an o-option!</system:String>
@@ -171,12 +172,12 @@
     <system:String x:Key="StatusUINoCodeUpdatesFound"     >no c-code updates found</system:String>
 
     <!-- Dialog UI Strings -->
-    <system:String xml:space="preserve" x:Key="DialogUINoGameDirAccess">hedge mod managew c-couwd nyot access t-the game diwectowy.&#x0a;pwease ensuwe the usews g-gwoup has "Write" set to awwow o-on the diwectowy bewow and aww o-of its fiwes and fowdews. rawr x3&#x0a;&#x0a;{0}</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUINoGameDirAccess">h-hedge mod managew couwd nyot a-access the game diwectowy.&#x0a;pwease e-ensuwe the usews gwoup h-has &quot;wwite&quot; set to awwow on the diwectowy b-bewow and aww of its fiwes a-and fowdews.&#x0a;&#x0a;{0}</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIDeleteMod"      >awe you suwe you want to dewete &quot;{0}&quot;?&#x0a;this a-action cannot b-be undone!</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModNewest"      >{0} is awweady u-up to date.</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModUpdate"      >a nyewew vewsion of {0} avaiwabwe! ({1})</system:String>
     <system:String xml:space="preserve" x:Key="DialogUIModCancelUpdate">awe you suwe you want to cancew updating?&#x0a;this may cowwupt {0}</system:String>
-    <system:String xml:space="preserve" x:Key="DialogUINoDecompressor" >couwd nyot find 7-zip o-ow winwaw!&#x0a;this i-is wequiwed to extwact t-the mod data&#x0a;&#x0a;pwease make suwe you have e-eithew one instawwed on youw s-system. (⑅˘꒳˘)</system:String>
+    <system:String xml:space="preserve" x:Key="DialogUINoDecompressor" >c-couwd n-nyot find 7-zip ow winwaw!&#x0a;this is wequiwed to extwact the mod data&#x0a;&#x0a;pwease make s-suwe you have eithew one instawwed on youw system. -.-</system:String>
 
     <!-- Status UI Lang Stuff Strings -->
     <system:String x:Key="StatusUIUpdateCompletedSingular"      >compweted</system:String>
@@ -190,6 +191,7 @@
     <!-- Mod Description UI Strings -->
     <system:String x:Key="ModDescriptionUIAbout">about {0}</system:String>
     <system:String x:Key="ModDescriptionUIMadeBy">made by</system:String>
+    <system:String x:Key="ModDescriptionUIMadeOn">Made on</system:String>
     <system:String x:Key="ModDescriptionUIDate">on</system:String>
 
     <!-- Mod Downloader Strings -->
