--- a/HedgeModManager/Languages/de-DE.xaml
+++ b/HedgeModManager/Languages/de-DE.xaml
@@ -192,7 +192,7 @@
     <system:String x:Key="ModDescriptionUIAbout">Über {0}</system:String>
     <system:String x:Key="ModDescriptionUIMadeBy">Erstellt von</system:String>
     <system:String x:Key="ModDescriptionUIMadeOn">Erstellt am</system:String>
-    <system:String x:Key="ModDescriptionUIDate">Am</system:String>
+    <system:String x:Key="ModDescriptionUIDate">am</system:String>
 
     <!-- Mod Downloader Strings -->
     <system:String x:Key="ModDownloaderFailed">Konnte die Mod nicht herunterladen</system:String>
