--- a/HedgeModManager/UI/ModUpdatesInfoView.xaml
+++ b/HedgeModManager/UI/ModUpdatesInfoView.xaml
@@ -32,7 +32,7 @@
     </UserControl.Resources>
 
     <Grid>
-        <Grid>
+        <Grid Margin="-3,2,-3,-4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width=".4*"/>
                 <ColumnDefinition/>
@@ -107,7 +107,7 @@
 
             <Grid Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Background="{DynamicResource HMM.Window.DialogBottom}">
                 <DockPanel>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="4,8">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="8,8">
                         <Button Content="{Binding UpdateText}" Padding="8,0" Margin="0,0,8,0" IsDefault="True"
                                 Command="{Binding UpdateCommand}"/>
 
